--- a/src/ChatHeader.css
+++ b/src/ChatHeader.css
@@ -4,12 +4,13 @@
     padding: 10px;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 3px solid #26282c;
 }
 
 .chatHeader__hash {
     color: gray;
     font-size: 30px;
-    padding: 10px;
+    padding: 2.5px 10px;
 }
 
 .chatHeader__left>h3 {
