--- a/src/Login.css
+++ b/src/Login.css
@@ -1,18 +1,82 @@
-.login {
-    display: grid;
-    place-items: center;
-    height: 100vh;
+.login__container{
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.login>button {
-    width: 300px;
-    background-color: #738adb;
-    color: #eff2f5;
-    font-weight: 800;
+.login{
+    background-color: #363a3f;
+    padding: 40px;
+    border-radius: 20px;
 }
 
-.login>button:hover {
-    background-color: black;
-    color: #738adb;
+.login__header{
+    margin-bottom: 20px;
+}
+
+.login__header>h2{
+    color: #ffff;
+    margin-bottom: 5px;
+}
+
+.login__header>div{
+    color: #ffff;
+}
+
+.input__container{
+    margin-bottom: 15px;
+}
+
+.input__field{
+    margin-bottom: 10px;
+}
+
+.input__field > h4{
+    color: #ffff;
+    margin-bottom: 5px;
+}
+
+.input__field > input{
+    width: 20rem;
+    border-radius: 3px;
+    border: 1px solid lightgray;
+    padding: 10px;
+    font-size: 15px;
+    background: #FAFAFA;
+    outline: none;
+}
+
+.button__container{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.button__container > button{
+    width: 100%;
+    color: #ffff;
+    background-color: #5865F2;
+    padding: 8px 20px;
+}
+
+.button__container > button:hover{
+    background-color: #3a46cc;
+}
+
+.login > div:last-child{
+    text-align: center;
+    color: #ffff;
+}
+
+.login > div:last-child > a{
+    color: #5865F2;
+    text-decoration: none;
+}
+
+.login > div:last-child:hover > a{
+    text-decoration: underline;
 }
