--- a/src/Login.css
+++ b/src/Login.css
@@ -1,82 +1,107 @@
-.login__container{
+.login__container {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(https://img.wallpapersafari.com/desktop/1920/1080/4/61/ypDTNV.jpg);
+    background-size: cover;
 }
 
-.login{
-    background-color: #363a3f;
-    padding: 40px;
-    border-radius: 20px;
+.login {
+    background-color: var(--background-primary);
+    padding: 30px;
+    border-radius: 7px;
+    animation: popup 0.2s;
 }
 
-.login__header{
+@keyframes popup {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.login__header {
     margin-bottom: 20px;
+    text-align: center;
 }
 
-.login__header>h2{
-    color: #ffff;
+.login__header > h2 {
+    color: var(--header-primary);
     margin-bottom: 5px;
 }
 
-.login__header>div{
-    color: #ffff;
+.login__header > div {
+    color: var(--header-secondary);
 }
 
-.input__container{
+.input__container {
     margin-bottom: 15px;
 }
 
-.input__field{
-    margin-bottom: 10px;
+.input__field {
+    margin-bottom: 20px;
 }
 
-.input__field > h4{
-    color: #ffff;
+.input__field > h5 {
+    color: var(--header-secondary);
     margin-bottom: 5px;
 }
 
-.input__field > input{
-    width: 20rem;
+.input__field > input {
+    width: 25rem;
     border-radius: 3px;
-    border: 1px solid lightgray;
-    padding: 10px;
+    padding: 12px;
     font-size: 15px;
-    background: #FAFAFA;
+    background-color: var(--text-input-bg);
+    border: 1.5px solid var(--text-input-border);
     outline: none;
+    color: var(--text-normal)
 }
 
-.button__container{
+.input__field > input:hover{
+    border: 1.5px solid var(--text-input-border-hover);
+    transition: 0.5s;
+}
+
+.button__container {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 25px;
 }
 
-.button__container > button{
+.button__container > button {
     width: 100%;
     color: #ffff;
-    background-color: #5865F2;
-    padding: 8px 20px;
+    background-color: var(--button-bg);
+    padding: 10px 20px;
+    text-transform: capitalize;
+    font-weight: 600;
 }
 
-.button__container > button:hover{
-    background-color: #3a46cc;
+.button__container > button:hover {
+    background-color: var(--button-hover);
 }
 
-.login > div:last-child{
-    text-align: center;
-    color: #ffff;
+.button__container > button:active{
+    background-color: var(--button-hover);
 }
 
-.login > div:last-child > a{
-    color: #5865F2;
+.login > div:last-child {
+    font-size: small;
+    color: #72767d;
+}
+
+.login > div:last-child > a {
+    color: var(--text-link);
     text-decoration: none;
 }
 
-.login > div:last-child:hover > a{
+.login > div:last-child:hover > a {
     text-decoration: underline;
 }
