--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,31 +1,23 @@
 .sidebar {
     display: flex;
     flex-direction: column;
-    flex: 0.25;
-    height: 100vh;
-    background-color: #2f3135;
+    height: 100%;
+    width: 20%;
+    min-width: 275px;
+    background-color: var(--background-secondary);
 }
 
 .sidebar__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    background-color: #2f3135;
-    color: white;
-    border-bottom: 3px solid #26282c;
+    padding: 15px;
+    color: var(--header-primary);
+    border-bottom: 2px solid #26282c;
 }
 
 .sidebar__channels {
     flex: 1;
-}
-
-.sidebar__addChannel {
-    cursor: pointer;
-}
-
-.sidebar__addChannel:hover {
-    color: white;
 }
 
 .sidebar__channelsHeader {
@@ -33,8 +25,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #2f3135;
-    color: gray;
+    color: var(--header-secondary);
 }
 
 .sidebar__header {
@@ -42,36 +33,29 @@
     align-items: center;
 }
 
-.sidebar__voice, .sidebar__profile {
+
+.sidebar__addChannel {
+    cursor: pointer;
+    padding: 5px;
+}
+
+.sidebar__addChannel:hover {
+    color: var(--header-primary);
+}
+
+.sidebar__profile {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: gray;
-    background-color: #2f3135;
-    padding: 10px;
-    border-top: 1px solid gray;
+    background-color: var(--background-secondary-alt);
+    padding: 0 10px;
 
 }
 
-.sidebar__voiceInfo {
-    flex: 1;
-    padding: 10px;
-}
-
-.sidebar__voiceInfo>h3 {
-    color: #4fb185;
-}
-
-.sidebar__voiceInfo>p {
-    font-size: smaller;
-}
-
-.sidebar__voiceIcons {
-    color: #4fb185;
-}
-
-.sidebar__voiceIcons>.MuiSvgIcon-root {
-    padding: 10px;
+.sidebar__profile>.MuiAvatar-root{
+    background-color: var(--background-primary);
+    margin-right: 10px;
 }
 
 .sidebar__profileInfo {
@@ -80,7 +64,7 @@
 }
 
 .sidebar__profileInfo>h3 {
-    color: white;
+    color: var(--header-primary);
     font-size: 15px;
 }
 
@@ -89,5 +73,5 @@
 }
 
 .sidebar__profileIcons>.MuiSvgIcon-root {
-    padding: 10px;
+    padding: 5px;
 }
