--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
     --text-input-border-hover: #040405;
     --text-normal: #dcddde;
     --text-link: #00aff4;
+    --text-area: #40444b;
 }
 
 .container{
