--- a/src/Chat.css
+++ b/src/Chat.css
@@ -20,25 +20,26 @@
 }
 
 .chat__input {
-    color: lightgray;
+    color: var(--header-secondary);
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-    border-radius: 5px;
-    border-top: 1px solid var(--header-tertiary);
-    background-color: #474b53;
+    padding: 10px;
+    margin: 0 15px 25px 15px;
+    border-radius: 10px;
+    background-color: var(--text-area);
 }
 
-.chat__input > form > input {   
+.chat__input > input {   
     padding: 5px 15px;
-    background: transparent;
+    background-color: transparent;
     width: 100%;
     border: none;
     outline-width: 0;
-    color: white;
+    color: var(--text-normal);
+    font-family: Whitney,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: large;
     outline: none;
+    flex: 1;
 }
 
 .chat__input > form {
@@ -51,14 +52,6 @@
     height: 0;
     background: none;
     border: none;
-}
-
-.chat__inputIcons {
-    background-color: #fff;
-}
-
-.chat__inputIcons > .MuiSvgIcon-root {
-    padding: 5px;
 }
 
 .chat__messages {
@@ -91,37 +84,38 @@
 .channel__description {
     width: 25%;
     height: 100%;
-    background-color: #2f3135;
+    background-color: var(--background-secondary);
     padding: 20px;
     box-sizing: border-box;
+    cursor: default;
 }
 
 .channel__title {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    color: var(--header-primary);
+    width: 100%;
+}
+
+.channel__title > h3{
+    color: var(--header-tertiary);
+    font-size: 30px;
+    margin-right: 10px;
 }
 
 .channel__title > .MuiSvgIcon-root {
     width: 30px;
     height: 30px;
     padding: 5px;
-    color: #ffff;
     margin-left: auto;
+    color: var(--header-secondary);
+    cursor: pointer;
 }
 
 .channel__title > .MuiSvgIcon-root:hover {
-    background-color: #42464b;
+    color: var(--header-primary);
     border-radius: 50%;
-}
-
-.channel__title > .MuiAvatar-root {
-    background-color: #42464b;
-}
-
-.channel__title > h1 {
-    padding: 0 10px;
-    color: #fff;
 }
 
 .channel__users > .user {
