--- a/src/ChatHeader.css
+++ b/src/ChatHeader.css
@@ -24,8 +24,11 @@
 .chatHeader__right {
     display: flex;
     align-items: center;
-    flex: 0.5;
     justify-content: space-between;
+}
+
+.chatHeader__right > .control{
+    margin-left: 10px;
 }
 
 .chatHeader__right>.MuiSvgIcon-root {
