--- a/src/Popover.css
+++ b/src/Popover.css
@@ -115,3 +115,60 @@
     background-color: var(--button-hover);
     border-radius: 3px;
 }
+
+.popover_container > .popover > .avatar_container{
+    display: flex;
+    padding: 0 20px;
+}
+
+.popover_container > .popover > .avatar_container > .avatars{
+    /* height: 200px; */
+    width: 460px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-left: 25px; 
+    padding-top: 10px;
+    margin-bottom: 15px;
+}
+
+.popover_container > .popover > .avatar_container > .avatars > .avatar{
+    width: 80px;
+    height: 80px;
+    margin-right: 25px;
+    margin-bottom: 5px;
+    padding: 3px;
+    cursor: pointer;
+    border: 2px solid transparent;
+}
+
+.popover_container > .popover > .avatar_container > .avatars > .avatar:hover{
+    border: 2px solid var(--header-primary);
+    border-radius: 50%;
+}
+
+.popover_container > .popover > .avatar_container > .avatars > .avatar.selected{
+    border: 2px solid var(--header-primary);
+    border-radius: 50%;
+}
+
+.popover_container > .popover > .avatar_container > .avatars > .avatar > img{
+    width: 100%;
+    height: 100%;
+}
+
+.popover_container > .popover > .avatar_container > .avatar_preview_container{
+    width: 200px;
+    margin-bottom: 15px;
+    background-color: #45474d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+}
+
+.popover_container > .popover > .avatar_container > .avatar_preview_container > img{
+    width: 150px;
+    height: 150px;
+}
