--- a/src/Components/Feed/Chat/Chat-Header/ChatHeader.css
+++ b/src/Components/Feed/Chat/Chat-Header/ChatHeader.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 7.5px;
-    min-height: 40px;
+    padding: 0 20px;
     color: var(--header-tertiary);
     border-bottom: 2px solid #26282c;
 }
@@ -11,9 +10,8 @@
 .chatHeader__hash {
     color: var(--header-tertiary);
     font-size: 30px;
-    padding: 0 10px;
+    padding-right: 10px;
 }
-
 
 .chatHeader__left>h3 {
     display: flex;
@@ -25,14 +23,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 12.5px 0;
 }
 
 .chatHeader__right > .control{
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 .chatHeader__right>.MuiSvgIcon-root {
-    padding: 5px;
     cursor: pointer;
 }
 
