--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(https://img.wallpapersafari.com/desktop/1920/1080/4/61/ypDTNV.jpg);
+    background-image: url(/BackgroundImage.jpg);
     background-size: cover;
 }
 
