--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -113,11 +113,12 @@
 .user_profile > .close_container > #close{
     color: var(--header-secondary);
     border: 2px solid var(--header-secondary);
-    padding: 5px;
     border-radius: 50%;
     position: absolute;
     top: 80px;
     left: 30px;
+    font-size: 30px;
+    padding: 2px;
 }
 
 .user_profile > .close_container > #close:hover{
